# Continuous-Deformation-Based-Panelization-For-Design-Rationalization-App

./: AuxBendingNormal.cpp  AuxSpherePerHinge.cpp  BendingNormal.h  CMakeLists.txt  ClusterHard.cpp  ClusterHard.h  FabricationMenu.h  FixAllVertices.cpp  MeshSimplificationMenu.h  MeshSimplificationPlugin.h  Minimizer.cpp  Minimizer.h  ObjectiveFunction.cpp  ObjectiveFunction.h  README.md  SDenergy.h  UniformSmoothness.cpp  UniformSmoothness.h  app_utils.h  deformation_plugin.cpp  deformation_plugin.h  implot.cpp  implot.h  main.cpp  optimization_output.cpp  optimization_output.h
data/: Octo_low.off  cube.off  cube_init_A.off  curve1.off  curve2.off  curve3.off  curve4.off  hand_9k.off  infinite_bar_200.off  infinite_bar_200_init_A.off  infinite_bar_200_init_R.off  infinite_bar_6k.off  infinite_cylinder_10k.off  infinite_cylinder_2k.off  infinite_hand_9k.off  infinite_octopus_7k.off  infinite_octopus_7k_init.off  infinite_octopus_7k_init_R.off  infinite_octopus_8k.off  octopus_8k.off  paper.off  strap.off
results/: reproducibility.txt
src/: main.cpp
src/GUIExtensions/: MeshSimplificationData.cpp  MeshSimplificationData.h  MeshSimplificationMenu.h  MeshSimplificationPlugin.cpp  MeshSimplificationPlugin.h  optimization_output.h
src/NumericalOptimizations/: Basic.cpp  Basic.h  InitAuxVar.cpp  InitAuxVar.h  Minimizer.cpp  Minimizer.h
src/ObjectiveFunctions/: AuxBendingNormal.h  AuxSpherePerHinge.h  AuxVariables.cpp  AuxVariables.h  Basic.cpp  Basic.h  BendingNormal.cpp  FixAllVertices.h  FixChosenConstraints.cpp  FixChosenConstraints.h  ObjectiveFunction.h  STVK.h  (+7 more)
(+42 files in other folders)
